# GameStorageManager

./: .gitignore  CMakeLists.txt  FastEditor.cfg  README.md  imgui.ini  pyproject.toml  resources.qrc
app/cli/: main.cpp
app/gui/: main.cpp
core/analyzer/: GameAnalysis.h  GameAnalyzer.cpp  GameAnalyzer.h
core/compressor/: CompressionTask.cpp  CompressionTask.h
core/rules_engine/: RecommendationEngine.cpp  RecommendationEngine.h
core/safety/: SafetyMetadata.h  SafetyMetadataStore.cpp  SafetyMetadataStore.h
core/scanner/: GameEntry.h  SteamScanner.cpp  SteamScanner.h
game_storage_manager/: utils.py
game_storage_manager/app/cli/: main.py
game_storage_manager/app/gui/: main.py
game_storage_manager/core/analyzer/: game_analysis.py  game_analyzer.py
game_storage_manager/core/compressor/: compression_task.py
game_storage_manager/core/rules_engine/: recommendation_engine.py
game_storage_manager/core/safety/: safety_metadata.py  safety_metadata_store.py
game_storage_manager/core/scanner/: game_entry.py  steam_scanner.py
game_storage_manager/system/filesystem/: filesystem.py
game_storage_manager/system/process/: compact_process_adapter.py
game_storage_manager/ui/controllers/: analysis_controller.py  compression_controller.py
game_storage_manager/ui/views/: main_window.py  settings_dialog.py
resources/: theme_dark.qss
system/filesystem/: Filesystem.cpp  Filesystem.h
system/process/: CompactProcessAdapter.cpp  CompactProcessAdapter.h
tests/: core_tests.cpp  test_core.py
ui/controllers/: AnalysisController.cpp  AnalysisController.h  CompressionController.cpp  CompressionController.h
ui/views/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
