[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-storage-manager"
version = "0.1.0"
description = "Optimiza tu librería de juegos automáticamente sin comprometer rendimiento."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
gsm-cli = "game_storage_manager.app.cli.main:main"
gsm-app = "game_storage_manager.app.gui.main:main"

[tool.setuptools.packages.find]
include = ["game_storage_manager*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
